tests/e2e/authz-server/envoy/policy-ordering/policy-b.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/playground/refs/heads/main/schemas/json/v3/validatingpolicy-policies.kyverno.io-v1alpha1.json
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: policy-b
spec:
  evaluation:
    mode: Envoy
  validations:
  - expression: >
      envoy
        .Denied(403)
        .WithBody("Unauthorized Request from Policy B")
        .Response()
